@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 
 Changes with Apache Traffic Server 3.1.0
+  *) [TS-840] Regression checks fail (again) due to faulty assert use.
+   Author: Arno Toell.
+
   *) [TS-842] remove uninstall target from build system
 
   *) [TS-648] Use hwloc library when available. This can be disabled
